--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -122,7 +122,7 @@
 
 		     <div class="img-zoom-container">
     <img id="myimage" src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg" alt="sonnet5" style="width:330px;height:440px;">
-    <div id="myresult" class="img-zoom-result" style="float:right"> </div>
+    <div id="myresult" class="img-zoom-result" style="float:left"> </div>
 </div>
 <script>
 imageZoom("myimage", "myresult");
