--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -119,21 +119,22 @@
   <p class="lead">
          “I am no painter” is something you would never expect to hear from an artist like Michelangelo Buonarroti. His frescos in the Sistine Chapel, most famous for The Last Judgment and the Creation of Man have become an icon of western culture and are considered to be Michelangelo’s most famous painted works. However, contrary to popular belief, Michelangelo was not just a visual artist. Not only was he celebrated for his painted and sculpted works; he was an admired architect, and a pretty amazing poet as well.</p>
 <p class="lead">Why would an incredibly gifted artist like Michelangelo also feel the need to write poetry? He might have been influenced by the intellectual milieu in which he found himself; going along with the social codes and expectations and profiling himself as a typical, Da Vinci-like ‘Renaissance man’, a homo universalis. It is nevertheless more likely that it was for the simple reason of self-expression. It has been noted many times that Michelangelo projected himself onto anything he created, thereby making himself into his own point of reference. Since he did not like to speak about his true thoughts and feelings, and almost never did (he was rather paranoid), his creative output is the only means by which we have the possibility to get closer to the master. Michelangelo's poetry, but also all his other art is filled with little bits and pieces of autobiographical information, and it is up to us to find and interpret them.</p>
-
+		</div>
+		
 		     <div class="img-zoom-container">
     <img id="myimage" src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg" alt="sonnet5" style="width:330px;height:440px;">
-    <div id="myresult" class="img-zoom-result" style="float:left"> </div>
+    <div id="myresult" class="img-zoom-result" style="float:right"> </div>
 </div>
 <script>
 imageZoom("myimage", "myresult");
 </script>
 		     
+<div class="jumbotron">		     
 <p class="lead">On a spring day in 1508, the 10th of May to be precise, 33-year old Michelangelo wrote that he would start working on the vault of Pope Sixtus’ chapel in Rome. Four years later, in October 1512, the work was finished and the Sistine Chapel was re-opened. People were absolutely amazed by the result. You had to be superhuman to create something like this.</p>
 
 <p class="lead">You indeed had to be something like a superhuman: imagine spending four years on high scaffolds with only a small, poorly lit and moldy space to work in. It was under these conditions that Michelangelo probably wrote a sonnet to his friend Giovanni da Pistoia.</p>
 	       <p class="lead">In this sonnet, Michelangelo complains about the physical challenges he has to endure while painting the ceiling of the famous Sistine Chapel. His back is aching, his neck is arched, his beard is completely stiff from all the paint that is dripping onto his face.</p>
-  </div>
-    </div>
+		</div>
 
            <div class="jumbotron-narrow">
              <div class="centered">
