--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -136,8 +136,11 @@ imageZoom("myimage", "myresult");
 	       <p class="lead">In this sonnet, Michelangelo complains about the physical challenges he has to endure while painting the ceiling of the famous Sistine Chapel. His back is aching, his neck is arched, his beard is completely stiff from all the paint that is dripping onto his face.</p>
 		</div>
 
-           <div class="jumbotron-narrow">
-             <div class="centered">
+	       <div id="homepage">
+      <!-- services area -->
+      <section id="services" class="clear">
+        <!-- article 1 -->
+        <article class="two_third">
 <table class="table table-hover">
   <thead>
     <tr>
@@ -267,7 +270,7 @@ imageZoom("myimage", "myresult");
     </tr>
 </tbody>
 </table>
-  </div>
+  </article>
 		
 		     <div class="jumbotron">
 					   <p class="lead">If we want a trustworthy impression of the artist's "true" thinking, a sonnet like this is all we could ask for: on this piece of paper, Michelangelo does not only give a written account of his experiece, he also draws it for us as you can see on the bottom-right of the paper. It only takes a little imagination to see his stained face and feel his sore limbs in this autobiographical sketch. In the final verse, Michelangelo tells Giovanni (and us) that he does not like being here, but most importantly: that he does not like to paint.</p>
