--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -140,7 +140,7 @@ imageZoom("myimage", "myresult");
       <!-- services area -->
       <section id="services" class="clear">
         <!-- article 1 -->
-        <article class="two_third">
+        <article class="one_third">
 <table class="table table-hover">
   <thead>
     <tr>
