--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -138,13 +138,13 @@ imageZoom("myimage", "myresult");
 
 	        <div class="row">
     <div class="column">
-      <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/Verse%20Italian%20original%20English%20translation1%20I%E2%80%99%20ho%20gia%CC%80%20fatto%20un%20gozzo%20in%20questo%20stento%20I%E2%80%99ve%20already%20grown%20a%20goiter%20at%20this%20drudgery%E2%80%942%20come%20fa%20l%E2%80%99acqua%20a%E2%80%99%20gatti%20in%20Lombardia%20as%20the%20water%20gives%20the%20cats%20in%20Lombardy3%20o.png>
+      <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/Verse%20Italian%20original%20English%20translation1%20I%E2%80%99%20ho%20gia%CC%80%20fatto%20un%20gozzo%20in%20questo%20stento%20I%E2%80%99ve%20already%20grown%20a%20goiter%20at%20this%20drudgery%E2%80%942%20come%20fa%20l%E2%80%99acqua%20a%E2%80%99%20gatti%20in%20Lombardia%20as%20the%20water%20gives%20the%20cats%20in%20Lombardy3%20o.png" alt="Italian original" style="width:440px, height:710px>
 	   </div>
     <div class="column">
-      <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg>
+      <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg" alt="sonnet" style="width:440px, height:710px>
 	    </div>
     <div class="column">
-	    <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/Verse%20Italian%20original%20English%20translation1%20I%E2%80%99%20ho%20gia%CC%80%20fatto%20un%20gozzo%20in%20questo%20stento%20I%E2%80%99ve%20already%20grown%20a%20goiter%20at%20this%20drudgery%E2%80%942%20come%20fa%20l%E2%80%99acqua%20a%E2%80%99%20gatti%20in%20Lombardia%20as%20the%20water%20gives%20the%20cats%20in%20Lombardy3%20o-1.png">
+	    <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/Verse%20Italian%20original%20English%20translation1%20I%E2%80%99%20ho%20gia%CC%80%20fatto%20un%20gozzo%20in%20questo%20stento%20I%E2%80%99ve%20already%20grown%20a%20goiter%20at%20this%20drudgery%E2%80%942%20come%20fa%20l%E2%80%99acqua%20a%E2%80%99%20gatti%20in%20Lombardia%20as%20the%20water%20gives%20the%20cats%20in%20Lombardy3%20o-1.png" alt="English translation" style="width:440px, height:710px>
 	    </div>
   </div>
 	       
