--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -138,7 +138,8 @@ imageZoom("myimage", "myresult");
 
 	      
   </div>
-	       
+	  <div>    
+	  <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg" alt="sonnet" style="float:left;width:520px;height:580px;padding-right:20px"> 
 		
 <table class="table table-hover">
   <thead>
@@ -269,7 +270,7 @@ imageZoom("myimage", "myresult");
     </tr>
 </tbody>
 </table>
-  </article>
+  </div>
 		
 		     <div class="jumbotron">
 					   <p class="lead">If we want a trustworthy impression of the artist's "true" thinking, a sonnet like this is all we could ask for: on this piece of paper, Michelangelo does not only give a written account of his experiece, he also draws it for us as you can see on the bottom-right of the paper. It only takes a little imagination to see his stained face and feel his sore limbs in this autobiographical sketch. In the final verse, Michelangelo tells Giovanni (and us) that he does not like being here, but most importantly: that he does not like to paint.</p>
