--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -139,13 +139,11 @@ imageZoom("myimage", "myresult");
 	      
   </div>
 	  <div>    
-	  <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg" alt="sonnet" style="float:left;width:440px;height:500px;padding-right:20px"> 
+	  <img src="https://raw.githubusercontent.com/annehaak/allereerste-website/master/10407082_10153286599168535_3615934254268379533_n.jpg" alt="sonnet" style="float:left;width:420px;height:500px;padding-right:20px"> 
 		
 <table class="table table-hover">
+	<style="float:right">
   <thead>
-	  table {
-    width: 60%;
-}
     <tr>
       <th scope="col">Verse</th>
       <th scope="col">Italian original</th>
